--- a/client/src/CSS/login.css
+++ b/client/src/CSS/login.css
@@ -1,30 +1,8 @@
-*{
-  overflow: hidden;
+body{
+  height: 100vh;
+  background-color: rgba(255, 0, 0, 0.685);
 }
-.gradient-custom-2 {
-    background: #fccb90;
-    background: -webkit-linear-gradient(to right, #2e24ee, #3312c7, #0b52eb, #454bb4);
-    background: linear-gradient(to right, #2e24ee, #3a1eb7, #0b52eb, #454bb4);
-  }
-#signIn-btn{
-  color: white;
-  border: none;
-  transition: 0.5s;
+
+#login-card{
+  box-shadow: 0 5px 15px 0 rgb(0, 0, 0);
 }
-  
-#all-cont{
-    border: 2px solid rgba(0, 0, 0, 0.23);
-    box-shadow: 0 12px 10px 0 rgba(0, 0, 0, 0.245);
-}
-  
-  @media (min-width: 360px) {
-    .gradient-form {
-      height: 100vh !important;
-    }
-  }
-  @media (min-width: 769px) {
-    .gradient-custom-2 {
-      border-top-right-radius: .3rem;
-      border-bottom-right-radius: .3rem;
-    }
-  }
