--- a/client/src/CSS/register.css
+++ b/client/src/CSS/register.css
@@ -2,6 +2,7 @@ body {
     background-color: hsl(0, 0%, 96%);
 }
 
-#form-cont {
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+.register-card{
+    width: 10px;
 }
+
